# SPDX-FileCopyrightText: 2019 Tuomas Siipola
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
authors = ["Tuomas Siipola <tuomas@zpl.fi>"]
default-run = "pio"
edition = "2018"
license = "AGPL-3.0-or-later"
name = "pio"
version = "0.5.0"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
clap = "2.33.1"
dssim = "3"
image = { version = "0.23", default-features = false, features = []}
imagequant = "3"
imgref = "1.6.1"
kamadak-exif = "0.5.1"
lcms2 = "5.3.1"
libwebp-sys = "0.4.0"
lodepng = "3.0.0"
mozjpeg = "0.9"
rand = "0.7"
ravif = { version = "0.8", default-features = false }
rayon = "1.3.1"
rgb = "0.8.18"
avif-parse = "1.0"
aom-decode = { path = "third_party/aom-decode"}
yuv = "0.1.4"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3.1.0"
