# SPDX-FileCopyrightText: 2019 Tuomas Siipola
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
authors = ["Tuomas Siipola <tuomas@zpl.fi>"]
default-run = "pio"
edition = "2018"
license = "AGPL-3.0-or-later"
name = "pio"
version = "0.5.0"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
clap = "2.33.1"
dssim = { version = "3", default-features = false, features = [] }
image = { version = "0.24", default-features = false, features = []}
imagequant = { version = "4", default-features = false, features = []}
imgref = "1.6.1"
kamadak-exif = "0.5.1"
lcms2 = "5.3.1"
libwebp-sys = "0.8.0"
lodepng = "3.0.0"
mozjpeg = "0.9"
rand = "0.8"
ravif = { version = "0.11", optional = true }
# rayon = "1.3.1"
rgb = "0.8.18"
avif-parse = { version = "1.0", optional = true }
aom-decode = { path = "third_party/aom-decode", optional = true }
jpegxl-rs = { path = "third_party/jpegxl-rs", default-features = false, optional = true }
num_cpus = "1"
lazy_static = "1"
log = "0.4"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3.1.0"

[features]
default = ["avif"]
avif = [ "ravif", "avif-parse", "aom-decode" ]
# jxl is WIP
jxl = [ "jpegxl-rs" ]
